syntax = "proto3";

import "google/protobuf/empty.proto";

package api;

service Employees {
    rpc AddEmployee(Employee) returns (ID);
    rpc EditEmployee(Employee) returns (google.protobuf.Empty);
    rpc DeleteEmployee(ID) returns (google.protobuf.Empty);
    rpc GetEmployeeList(Date) returns (stream Employee);
    rpc GetEmployee(ID) returns (Employee);
    rpc GetEmployeePayments(IDTime) returns (stream Employee);
}

message Employee {
    uint64 id = 1;
    string date = 2;
    string name = 3;
    string position = 4;
    uint64 grade = 5;
    bool tu_membership = 6;
    double salary = 7;
    double accruals = 8;
    double deduction = 9;
}

message IDTime {
    ID id = 1;
    Date date = 2;
}

message ID {
    uint64 id = 1;
}

message Date {
    string date = 1;
}
